[package]
name = "aws-flow-logs"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

[dependencies]
aws-logs-utils = { path = "../aws-logs-utils" }
color-eyre = "0.6.2"
env_logger = "0.10.1"
lazy_static = "1.4.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
