[package]
name = "aws-flow-logs"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

[dependencies]
aws-logs-utils = { path = "../aws-logs-utils" }
clap = { version = "4.5.20", features = ["derive", "env"] }
color-eyre = "0.6.2"
env_logger = "0.11.2"
lazy_static = "1.4.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
