[package]
name = "aws-logs-utils"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

[dependencies]
aws-s3-utils = { path = "../aws-s3-utils" }
color-eyre = "0.6.2"
csv = "1.2.1"
flate2 = "1.0.25"
futures = "0.3.28"
human_format = "1.0.3"
lazy_static = "1.3.0"
log = "0.4.17"
rusoto_s3 = "0.48.0"
wirefilter-engine = "0.6.1"
serde = "1.0.159"
