[package]
name = "aws-logs-utils"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

[dependencies]
aws-s3-utils = { path = "../aws-s3-utils" }
color-eyre = "0.6.2"
csv = "1.3.0"
flate2 = "1.0.28"
futures = "0.3.30"
human_format = "1.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
rusoto_s3 = "0.48.0"
wirefilter-engine = "0.6.1"
serde = "1.0.197"
