[package]
name = "aws-ssm-env-exporter"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

[dependencies]
color-eyre = "0.6.2"
env_logger = "0.10.0"
envfile = "0.2.1"
lazy_static = "1.3.0"
log = "0.4.17"
regex = "1.4.1"
rusoto_core = "0.48.0"
rusoto_ssm = "0.48.0"
structopt = "0.3.4"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "fs"] }
