[package]
name = "fix-ksql-deleted-topics"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

[dependencies]
color-eyre = "0.6.3"
env_logger = "0.11.3"
http = "0.2.12"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }
