[package]
name = "fix-ksql-deleted-topics"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

[dependencies]
color-eyre = "0.6.2"
env_logger = "0.11.2"
http = "1.0.0"
log = "0.4.20"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }
