[package]
name = "uuid-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4", "v7"] }
